--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
   "name": "wexc",
   "private": true,
   "scripts": {
-    "dev": "pnpm -r dev"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "vite": "npm:rolldown-vite@7.1.12"
+  },
+  "pnpm": {
+    "overrides": {
+      "vite": "npm:rolldown-vite@7.1.12"
+    }
   }
 }
