--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "wexc",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "start": "pnpm run dev",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
